--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ display: inline-block;
 <source src="zvuk/6.m4a" type="audio/mpeg" />
 </audio>
 <audio id="zvuk7">
-<source src="zvuk/7.m4a" type="audio/mpeg" />
+<source src="zvuk/7.mp3" type="audio/mpeg" />
 </audio>
 <audio id="zvuk8">
-<source src="zvuk/8.m4a" type="audio/mpeg" />
+<source src="zvuk/8.mp3" type="audio/mpeg" />
 </audio>
 <audio id="zvuk9">
 <source src="zvuk/9.m4a" type="audio/mpeg" />
@@ -488,33 +488,35 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">6. ... sportu udávají prostor sportu.</h1>
+<h1>6. "degrees of freedom" pracuje na principu, že pokud mám například soubor o 3 neznámých a 2 z těch 3 neznámých vím, tak tu poslední (třetí) ... a tedy df = 2. </h1>
 <hr/>
 <input class="display" id="text6" placeholder="answer">
 <br/>
 <button onclick="fn6()" id = "btn6">Klikni</button>
 <button id="cudlik6" style="display:none" onclick="next(6)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Konstitutivní pravidla'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='můžu dopočítat'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">7. Konstitutivní pravidla sportu předepisují, ... </h1>
+<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">7. to instantiate = ... </h1>
 <hr/>
 <input class="display" id="text7" placeholder="answer">
 <br/>
 <button onclick="fn7()" id = "btn7">Klikni</button>
 <button id="cudlik7" style="display:none" onclick="next(7)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='co máme dělat'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='to represent'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://dictionary.cambridge.org/dictionary/english/instantiate'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">8. ... stanovují, co se stane, když hráč něco udělá či neudělá podle pravidel. </h1>
+<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">8. to instantiate = to represent ...  </h1>
 <hr/>
 <input class="display" id="text8" placeholder="answer">
 <br/>
 <button onclick="fn8()" id = "btn8">Klikni</button>
 <button id="cudlik8" style="display:none" onclick="next(8)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Regulativní pravidla'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='or be an example of something'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://dictionary.cambridge.org/dictionary/english/instantiate'">Zdroj</p>
 </div>
 
 <div class="container">
@@ -1487,7 +1489,7 @@ document.getElementById('zvuk5').play(); return false;
 
 function fn6()
 {
-if (document.getElementById("text6").value == "Konstitutivní pravidla") {
+if (document.getElementById("text6").value == "můžu dopočítat") {
 document.getElementById('cudlik6').style.display = "inline";
 document.getElementById('zvuk6').play(); return false;
 }
@@ -1496,7 +1498,7 @@ document.getElementById('zvuk6').play(); return false;
 
 function fn7()
 {
-if (document.getElementById("text7").value == "co máme dělat") {
+if (document.getElementById("text7").value == "to represent") {
 document.getElementById('cudlik7').style.display = "inline";
 document.getElementById('zvuk7').play(); return false;
 }
@@ -1505,7 +1507,7 @@ document.getElementById('zvuk7').play(); return false;
 
 function fn8()
 {
-if (document.getElementById("text8").value == "Regulativní pravidla") {
+if (document.getElementById("text8").value == "or be an example of something") {
 document.getElementById('cudlik8').style.display = "inline";
 document.getElementById('zvuk8').play(); return false;
 }
