--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">10. "Type II error" je </h1>
+<h1>10. "Type II error" je </h1>
 <hr/>
 <input class="display" id="text10" placeholder="answer">
 <br/>
@@ -540,33 +540,33 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">11. Podle Michaela Sandela se "moral reasoning" dělí na ... </h1>
+<h1>11. The most common misinterpretation is that the p value is the probability that the null hypothesis is true—that the sample result occurred by chance. For example, a misguided researcher might say that because the p value is .02, there is only a 2% chance that the result is due to chance and a 98% chance that it reflects a real relationship in the population. But this is incorrect. The p value is really the probability of a result at least as extreme as the sample result if the null hypothesis were true. So a p value of .02 means that if the null hypothesis were true, a ... would occur only 2% of the time. </h1>
 <hr/>
 <input class="display" id="text11" placeholder="answer">
 <br/>
 <button onclick="fn11()" id = "btn11">Klikni</button>
 <button id="cudlik11" style="display:none" onclick="next(11)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='consequentialist, categorical'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='sample result this extreme'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Justice: What's The Right Thing To Do? Episode 01 THE MORAL SIDE OF MURDER">12. Kdo "vynalezl" utilitarismus? </h1>
+<h1>12. The most common misinterpretation is that the p value is the probability that the null hypothesis is true—that the sample result occurred by chance. For example, a misguided researcher might say that because the p value is .02, there is only a 2% chance that the result is due to chance and a 98% chance that it reflects a real relationship in the population. But this is incorrect. The p value is really the probability of a result at least as extreme as the sample result if the null hypothesis were true. So a p value of .02 means that if the null hypothesis were true, a sample result this extreme ... 2% of the time. </h1>
 <hr/>
 <input class="display" id="text12" placeholder="answer">
 <br/>
 <button onclick="fn12()" id = "btn12">Klikni</button>
 <button id="cudlik12" style="display:none" onclick="next(12)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Jeremy Bentham'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='would occur only'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj:https://www.financevpraxi.cz/mikroekonomie-analyza-poptavky">13. ... povídal, že "Lidé s jsou od přírody rovni" .</h1>
+<h1>13. But how low must the p value be before the sample result is considered unlikely enough to reject the null hypothesis? In null hypothesis testing, this criterion is called <strong>α (alpha)</strong> and is ... .</h1>
 <hr/>
 <input class="display" id="text13" placeholder="answer">
 <br/>
 <button onclick="fn13()" id = "btn13">Klikni</button>
 <button id="cudlik13" style="display:none" onclick="next(13)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Thomas Hobbes'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='almost always set to .05'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1532,7 +1532,7 @@ document.getElementById('zvuk10').play(); return false;
 
 function fn11()
 {
-if (document.getElementById("text11").value == "consequentialist, categorical") {
+if (document.getElementById("text11").value == "sample result this extreme") {
 document.getElementById('cudlik11').style.display = "inline";
 document.getElementById('zvuk11').play(); return false;
 }
@@ -1540,7 +1540,7 @@ document.getElementById('zvuk11').play(); return false;
 
 function fn12()
 {
-if (document.getElementById("text12").value == "Jeremy Bentham") {
+if (document.getElementById("text12").value == "would occur only") {
 document.getElementById('cudlik12').style.display = "inline";
 document.getElementById('zvuk12').play(); return false;
 }
@@ -1548,7 +1548,7 @@ document.getElementById('zvuk12').play(); return false;
 
 function fn13()
 {
-if (document.getElementById("text13").value == "Thomas Hobbes") {
+if (document.getElementById("text13").value == "almost always set to .05") {
 document.getElementById('cudlik13').style.display = "inline";
 document.getElementById('zvuk13').play(); return false;
 }
