pridany otazky a jedna opravena

--- a/index.html
+++ b/index.html
@@ -671,33 +671,36 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str.104">23. Kategorický imperativ "vynalezl" ...  </h1>
+<h1>23. One-way ANOVA se v češtině nazývá ...  </h1>
 <hr/>
 <input class="display" id="text23" placeholder="answer">
 <br/>
 <button onclick="fn23()" id = "btn23">Klikni</button>
 <button id="cudlik23" style="display:none" onclick="next(23)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Immanuel Kant'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='jednofaktorová'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str. 106">24. Kant odmítá, že by se člověk měl podřizovat pravidlům a zákonům, která mu vnucuje ... či hrozba. </h1>
+<h1>24. Nezávislým (vstupním) proměnným říkáme ... </h1>
 <hr/>
 <input class="display" id="text24" placeholder="answer">
 <br/>
 <button onclick="fn24()" id = "btn24">Klikni</button>
 <button id="cudlik24" style="display:none" onclick="next(24)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='cizí autorita'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='faktory'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str. 106">25. Dle Kanta se svobodný a odpovědný člověk musí nutně podřídit pravidlům, která mu diktuje ..., např. v podobě ... nebo uznání obecně prospěšné a nezbytné autority panovníka. </h1>
+<h1>25. Nezávislým (vstupním) proměnným říkáme faktory, jedná se o ... </h1>
 <hr/>
 <input class="display" id="text25" placeholder="answer">
 <br/>
 <button onclick="fn25()" id = "btn25">Klikni</button>
 <button id="cudlik25" style="display:none" onclick="next(25)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='vlastní rozum; kategorického imperativu'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='nominální (kategoriální) proměnné'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
@@ -708,96 +711,104 @@ display: inline-block;
 <button onclick="fn26()" id = "btn26">Klikni</button>
 <button id="cudlik26" style="display:none" onclick="next(26)">Další</button>
 <p class="tajenka" onclick="this.innerHTML='etiky důsledků'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str. 103">27. David Hume byl radikálním ...  </h1>
+<h1>27. Nezávislým (vstupním) proměnným říkáme faktory, jedná se o nominální (kategoriální) proměnné (...). </h1>
 <hr/>
 <input class="display" id="text27" placeholder="answer">
 <br/>
 <button onclick="fn27()" id = "btn27">Klikni</button>
 <button id="cudlik27" style="display:none" onclick="next(27)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='popíračem svobody'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='tedy pouze názvy'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: http://gymnazium1.milevsko.cz/dokumenty/ekf2/inf/inflace.html">28. ... povídal, že "Prosté podvolení se skepticismu nemůže nikdy stačit k překonání nepokojného rozumu". </h1>
+<h1>28. Nezávislým (vstupním) proměnným říkáme faktory, jedná se o nominální (kategoriální) proměnné (tedy pouze názvy). Pokud máme jeden faktor, hovoříme o ... </h1>
 <hr/>
 <input class="display" id="text28" placeholder="answer">
 <br/>
 <button onclick="fn28()" id = "btn28">Klikni</button>
 <button id="cudlik28" style="display:none" onclick="next(28)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Immanuel Kant'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='jednofaktorové'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: http://gymnazium1.milevsko.cz/dokumenty/ekf2/inf/inflace.html">29. ... položil základy moderní demokracie.  </h1>
+<h1>29. Nezávislým (vstupním) proměnným říkáme faktory, jedná se o nominální (kategoriální) proměnné (tedy pouze názvy). Pokud máme jeden faktor, hovoříme o jednofaktorové (...)</h1>
 <hr/>
 <input class="display" id="text29" placeholder="answer">
 <br/>
 <button onclick="fn29()" id = "btn29">Klikni</button>
 <button id="cudlik29" style="display:none" onclick="next(29)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='John Locke'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='one-way ANOVA'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: http://gymnazium1.milevsko.cz/dokumenty/ekf2/inf/inflace.html">30. Jak nazýváme etiku povinností? </h1>
+<h1>30. Nezávislým (vstupním) proměnným říkáme faktory, jedná se o nominální (kategoriální) proměnné (tedy pouze názvy). Pokud máme jeden faktor, hovoříme o jednofaktorové (one-way ANOVA), ... </h1>
 <hr/>
 <input class="display" id="text30" placeholder="answer">
 <br/>
 <button onclick="fn30()" id = "btn30">Klikni</button>
 <button id="cudlik30" style="display:none" onclick="next(30)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='deontologie'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='např. jeden faktor pohlaví: muž, žena'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: http://gymnazium1.milevsko.cz/dokumenty/ekf2/inf/inflace.html">31. Představitelé politické filosofie jsou? </h1>
+<h1>31. Nezávislým (vstupním) proměnným říkáme faktory, jedná se o nominální (kategoriální) proměnné (tedy pouze názvy). Pokud máme jeden faktor, hovoříme o jednofaktorové (one-way ANOVA), např. 1 faktor pohlaví: muž, žena – celkem 2 skupiny (2 hodnoty proměnné pohlaví) ... .</h1>
 <hr/>
 <input class="display" id="text31" placeholder="answer">
 <br/>
 <button onclick="fn31()" id = "btn31">Klikni</button>
 <button id="cudlik31" style="display:none" onclick="next(31)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Thomas Hobbes, John Locke a David Hume'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='- celkem dvě skupiny'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str. 103">32. " ... na jedné straně pochybuje o tom, že by si všichni lidé byli podobní - jak předpokládá ... - a místo toho postuluje neosobní rovnost, která je racionálním důsledkem základního předpokladu individuální svobody"</h1>
+<h1>32. Nezávislým (vstupním) proměnným říkáme faktory, jedná se o nominální (kategoriální) proměnné (tedy pouze názvy). Pokud máme jeden faktor, hovoříme o jednofaktorové (one-way ANOVA), např. 1 faktor pohlaví: muž, žena – celkem 2 skupiny (...).</h1>
 <hr/>
 <input class="display" id="text32" placeholder="answer">
 <br/>
 <button onclick="fn32()" id = "btn32">Klikni</button>
 <button id="cudlik32" style="display:none" onclick="next(32)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kant; Zlaté pravidlo'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='2 hodnoty proměnné pohlaví'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str.104">33. Kantův výrok "Jednej vždy tak, aby se maxima tvé vůle mohla stát principem všeobecného zákonodárství" je projevem ... </h1>
+<h1>33. Můžeme však použít kombinaci dvou faktorů (two-way ANOVA), např. ... : muž, žena a ... : bez maturity, s maturitou, vysokoškolské </h1>
 <hr/>
 <input class="display" id="text33" placeholder="answer">
 <br/>
 <button onclick="fn33()" id = "btn33">Klikni</button>
 <button id="cudlik33" style="display:none" onclick="next(33)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='kategorického imperativu'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='faktor pohlaví; faktor vzdělání'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='https://fu.ff.cuni.cz/STAT/17_testy_stredni_anova.html'">Zdroj</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: FTVS prezentace">34. Kdo povídal, že "Člověk má přirozené právo, tj. může dělat vše, co mu umožní zachování svého života" ? </h1>
+<h1>34. Můžeme však použít kombinaci dvou faktorů (two-way ANOVA), např. faktor pohlaví: muž, žena a faktor vzdělání: bez maturity, s maturitou, vysokoškolské – kombinace obou faktorů vytváří ... (2x3). </h1>
 <hr/>
 <input class="display" id="text34" placeholder="answer">
 <br/>
 <button onclick="fn34()" id = "btn34">Klikni</button>
 <button id="cudlik34" style="display:none" onclick="next(34)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Thomas Hobbes'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='celkem 6 skupin'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>35. Zdroj citátu "Ó povinnosti, ty vznešené a velké jméno, jež v sobě nemáš nic libovolného, co by se snad vlichocovalo či podbízelo, nýbrž vyžaduješ podřízení - zároveň ale ničím nehrozíš, nýbrž pouze stanovíš Zákon!"</h1>
+<h1>35. Obecně může být faktorů i více, pak používáme ... ANOVA.</h1>
 <hr/>
 <input class="display" id="text35" placeholder="answer">
 <br/>
 <button onclick="fn35()" id = "btn35">Klikni</button>
 <button id="cudlik35" style="display:none" onclick="next(35)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kritik der praktischen Vernunft'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='obecnou vícefaktorovou (n-way)'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1642,7 +1653,7 @@ document.getElementById('zvuk22').play(); return false;
 
 function fn23()
 {
-if (document.getElementById("text23").value == "Immanuel Kant") {
+if (document.getElementById("text23").value == "jednofaktorová") {
 document.getElementById('cudlik23').style.display = "inline";
 document.getElementById('zvuk23').play(); return false;
 }
@@ -1650,7 +1661,7 @@ document.getElementById('zvuk23').play(); return false;
 
 function fn24()
 {
-if (document.getElementById("text24").value == "cizí autorita") {
+if (document.getElementById("text24").value == "faktory") {
 document.getElementById('cudlik24').style.display = "inline";
 document.getElementById('zvuk24').play(); return false;
 }
@@ -1658,7 +1669,7 @@ document.getElementById('zvuk24').play(); return false;
 
 function fn25()
 {
-if (document.getElementById("text25").value == "vlastní rozum; kategorického imperativu") {
+if (document.getElementById("text25").value == "nominální (kategoriální) proměnné") {
 document.getElementById('cudlik25').style.display = "inline";
 document.getElementById('zvuk25').play(); return false;
 }
@@ -1676,7 +1687,7 @@ document.getElementById('zvuk26').play(); return false;
 
 function fn27()
 {
-if (document.getElementById("text27").value == "popíračem svobody") {
+if (document.getElementById("text27").value == "tedy pouze názvy") {
 document.getElementById('cudlik27').style.display = "inline";
 document.getElementById('zvuk27').play(); return false;
 }
@@ -1685,7 +1696,7 @@ document.getElementById('zvuk27').play(); return false;
 
 function fn28()
 {
-if (document.getElementById("text28").value == "Immanuel Kant") {
+if (document.getElementById("text28").value == "jednofaktorové") {
 document.getElementById('cudlik28').style.display = "inline";
 document.getElementById('zvuk28').play(); return false;
 }
@@ -1693,7 +1704,7 @@ document.getElementById('zvuk28').play(); return false;
 
 function fn29()
 {
-if (document.getElementById("text29").value == "John Locke") {
+if (document.getElementById("text29").value == "one-way ANOVA") {
 document.getElementById('cudlik29').style.display = "inline";
 document.getElementById('zvuk29').play(); return false;
 }
@@ -1701,7 +1712,7 @@ document.getElementById('zvuk29').play(); return false;
 
 function fn30()
 {
-if (document.getElementById("text30").value == "deontologie") {
+if (document.getElementById("text30").value == "např. jeden faktor pohlaví: muž, žena") {
 document.getElementById('cudlik30').style.display = "inline";
 document.getElementById('zvuk30').play(); return false;
 }
@@ -1709,7 +1720,7 @@ document.getElementById('zvuk30').play(); return false;
 
 function fn31()
 {
-if (document.getElementById("text31").value == "Thomas Hobbes, John Locke a David Hume") {
+if (document.getElementById("text31").value == "- celkem dvě skupiny") {
 document.getElementById('cudlik31').style.display = "inline";
 document.getElementById('zvuk31').play(); return false;
 }
@@ -1717,7 +1728,7 @@ document.getElementById('zvuk31').play(); return false;
 
 function fn32()
 {
-if (document.getElementById("text32").value == "Kant; Zlaté pravidlo") {
+if (document.getElementById("text32").value == "2 hodnoty proměnné pohlaví") {
 document.getElementById('cudlik32').style.display = "inline";
 document.getElementById('zvuk32').play(); return false;
 }
@@ -1725,7 +1736,7 @@ document.getElementById('zvuk32').play(); return false;
 
 function fn33()
 {
-if (document.getElementById("text33").value == "kategorického imperativu") {
+if (document.getElementById("text33").value == "faktor pohlaví; faktor vzdělání") {
 document.getElementById('cudlik33').style.display = "inline";
 document.getElementById('zvuk33').play(); return false;
 }
@@ -1733,7 +1744,7 @@ document.getElementById('zvuk33').play(); return false;
 
 function fn34()
 {
-if (document.getElementById("text34").value == "Thomas Hobbes") {
+if (document.getElementById("text34").value == "celkem 6 skupin") {
 document.getElementById('cudlik34').style.display = "inline";
 document.getElementById('zvuk34').play(); return false;
 }
@@ -1741,7 +1752,7 @@ document.getElementById('zvuk34').play(); return false;
 
 function fn35()
 {
-if (document.getElementById("text35").value == "Kritik der praktischen Vernunft") {
+if (document.getElementById("text35").value == "obecnou vícefaktorovou (n-way)") {
 document.getElementById('cudlik35').style.display = "inline";
 document.getElementById('zvuk35').play(); return false;
 }
